--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-echo "<html><body><h1>My Web App</h1><p>Welcome to my web app!</p></body></html>"
+echo "<html><body><h1>My Web App</h1><p>Welcome to my web app!</p><footer>Copyright 2024</footer></body></html>"
